--- a/app/src/main/res/layout/movie_single_holder.xml
+++ b/app/src/main/res/layout/movie_single_holder.xml
@@ -32,7 +32,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/image_movie_uppar_recycler"
         app:layout_constraintTop_toBottomOf="@+id/image_movie_uppar_recycler"
-        app:srcCompat="@drawable/ticket_uppar" />
+        app:srcCompat="@drawable/ticket_lower" />
 
     <ImageView
         android:id="@+id/image_movie_poster_recycler"
@@ -57,6 +57,7 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="@+id/image_movie_lower_recycler"
         app:layout_constraintStart_toStartOf="@+id/image_movie_lower_recycler"
         app:layout_constraintTop_toTopOf="@+id/image_movie_lower_recycler" />
@@ -76,4 +77,28 @@
         app:layout_constraintEnd_toEndOf="@+id/image_movie_lower_recycler"
         app:layout_constraintStart_toStartOf="@+id/image_movie_lower_recycler"
         app:layout_constraintTop_toBottomOf="@+id/text_title_recycler" />
+
+    <ImageView
+        android:id="@+id/image_count"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="@+id/image_movie_uppar_recycler"
+        app:layout_constraintStart_toStartOf="@+id/image_movie_uppar_recycler"
+        app:layout_constraintTop_toBottomOf="@+id/image_movie_poster_recycler"
+        app:srcCompat="@drawable/button_rounded" />
+
+    <TextView
+        android:id="@+id/text_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/image_count"
+        app:layout_constraintEnd_toEndOf="@+id/image_count"
+        app:layout_constraintStart_toStartOf="@+id/image_count"
+        app:layout_constraintTop_toTopOf="@+id/image_count" />
 </android.support.constraint.ConstraintLayout>
