--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,33 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progressBar"-->
+        <!--style="?android:attr/progressBarStyle"-->
+        <!--android:layout_width="96dp"-->
+        <!--android:layout_height="96dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="150dp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--android:tooltipText="Please Wait...."-->
+        <!--app:layout_constraintTop_toTopOf="@+id/rv_main" />-->
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/LoadingIndicator"
+        style="@style/AVLoadingIndicatorView.Large"
+        android:layout_width="124dp"
+        android:layout_height="128dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="150dp"
+        app:indicatorColor="@color/colorAccent"
+        app:indicatorName="BallClipRotateMultipleIndicator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_detais_main"
         android:layout_width="0dp"
@@ -41,6 +68,7 @@
             android:textAlignment="center"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"/>
+
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
