--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#ff4081</color>
 
     <color name="colorYello">#ffff00</color>
+    <color name="colorRed">#ff0000</color>
+    <color name="colorSkyBlue">#00ffff</color>
+    <color name="colorBlue">#0000ff</color>
+    <color name="colorGreen">#00ff00</color>
+    <color name="colorBlack">#000000</color>
+
 </resources>
