--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,18 @@
         <!--android:tooltipText="Please Wait...."-->
         <!--app:layout_constraintTop_toTopOf="@+id/rv_main" />-->
 
+    <ImageView
+        android:id="@+id/image_backgroundProgress_main"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:color/white" />
+
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/LoadingIndicator"
         style="@style/AVLoadingIndicatorView.Large"
@@ -46,6 +58,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_progress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Please Wait...\n Fetching Data from Internet..."
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintTop_toBottomOf="@+id/LoadingIndicator" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_detais_main"
