--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="colorBlue">#0000ff</color>
     <color name="colorGreen">#00ff00</color>
     <color name="colorBlack">#000000</color>
+    <color name="partialTransparent">#50ffffff</color>
+    <color name="colorWhite">#ffffff</color>
 
 </resources>
