Fixed screen freeze issue Bug Fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/image_no_connection"
+        android:layout_width="91dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintEnd_toEndOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main"
+        app:srcCompat="@drawable/ic_no_connection" />
+
     <TextView
         android:id="@+id/text_progress"
         android:layout_width="0dp"
