--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,166 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_detail_vector"
-    tools:context=".DetailActivity">
+    android:background="@drawable/background_detail_vector">
 
-    <ImageView
-        android:id="@+id/image_poster_detail"
-        android:layout_width="175dp"
-        android:layout_height="250dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent" />
-
-    <TextView
-        android:id="@+id/text_title_detail"
-        android:layout_width="0dp"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@android:color/background_light"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/image_poster_detail"
-        app:layout_constraintTop_toTopOf="@+id/image_poster_detail" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".DetailActivity">
 
-    <TextView
-        android:id="@+id/tag_release_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="Release Date"
-        android:textAlignment="center"
-        android:textColor="@color/colorYello"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/text_title_detail"
-        app:layout_constraintStart_toStartOf="@+id/text_title_detail"
-        app:layout_constraintTop_toBottomOf="@+id/text_title_detail" />
+        <ImageView
+            android:id="@+id/image_backdrop_detail"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            app:layout_collapseMode="parallax"
+            app:layout_collapseParallaxMultiplier="0.75"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background" />
 
-    <TextView
-        android:id="@+id/text_release_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/tag_release_detail"
-        app:layout_constraintStart_toStartOf="@+id/tag_release_detail"
-        app:layout_constraintTop_toBottomOf="@+id/tag_release_detail" />
+        <ImageView
+            android:id="@+id/image_poster_detail"
+            android:layout_width="175dp"
+            android:layout_height="250dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_backdrop_detail"
+            app:srcCompat="@color/colorAccent" />
 
-    <TextView
-        android:id="@+id/tag_synopsis_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:text="Plot Synopsis"
-        android:textAlignment="center"
-        android:textColor="@color/colorYello"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_rating_detail" />
+        <TextView
+            android:id="@+id/text_title_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_poster_detail"
+            app:layout_constraintTop_toTopOf="@+id/image_poster_detail" />
 
-    <TextView
-        android:id="@+id/tag_genre_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Genre"
-        android:textAlignment="center"
-        android:textColor="@color/colorYello"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/text_release_detail"
-        app:layout_constraintStart_toStartOf="@+id/text_release_detail"
-        app:layout_constraintTop_toBottomOf="@+id/text_release_detail" />
+        <TextView
+            android:id="@+id/tag_release_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:text="Release Date"
+            android:textAlignment="center"
+            android:textColor="@color/colorYello"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/text_title_detail"
+            app:layout_constraintStart_toStartOf="@+id/text_title_detail"
+            app:layout_constraintTop_toBottomOf="@+id/text_title_detail" />
 
-    <TextView
-        android:id="@+id/text_genre_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/tag_genre_detail"
-        app:layout_constraintStart_toStartOf="@+id/tag_genre_detail"
-        app:layout_constraintTop_toBottomOf="@+id/tag_genre_detail" />
+        <TextView
+            android:id="@+id/text_release_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/tag_release_detail"
+            app:layout_constraintStart_toStartOf="@+id/tag_release_detail"
+            app:layout_constraintTop_toBottomOf="@+id/tag_release_detail" />
 
-    <TextView
-        android:id="@+id/text_rating_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_rounded"
-        android:padding="4dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/text_total_votes_detail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_poster_detail" />
+        <TextView
+            android:id="@+id/tag_synopsis_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:text="Plot Synopsis"
+            android:textAlignment="center"
+            android:textColor="@color/colorYello"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_rating_detail" />
 
-    <TextView
-        android:id="@+id/text_total_votes_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/button_rounded"
-        android:padding="4dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text_rating_detail"
-        app:layout_constraintTop_toTopOf="@+id/text_rating_detail" />
+        <TextView
+            android:id="@+id/tag_genre_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Genre"
+            android:textAlignment="center"
+            android:textColor="@color/colorYello"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/text_release_detail"
+            app:layout_constraintStart_toStartOf="@+id/text_release_detail"
+            app:layout_constraintTop_toBottomOf="@+id/text_release_detail" />
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tag_synopsis_detail">
+        <TextView
+            android:id="@+id/text_genre_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/tag_genre_detail"
+            app:layout_constraintStart_toStartOf="@+id/tag_genre_detail"
+            app:layout_constraintTop_toBottomOf="@+id/tag_genre_detail" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/text_rating_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_rounded"
+            android:padding="4dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/text_total_votes_detail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_poster_detail" />
+
+        <TextView
+            android:id="@+id/text_total_votes_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/button_rounded"
+            android:padding="4dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_rating_detail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_rating_detail"
+            app:layout_constraintTop_toTopOf="@+id/text_rating_detail" />
+
+        <TextView
+            android:id="@+id/text_synopsis_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            android:textColor="#ffffff"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tag_synopsis_detail" />
 
-            <TextView
-                android:id="@+id/text_synopsis_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
-                android:textColor="#ffffff"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tag_synopsis_detail" />
-        </LinearLayout>
-    </ScrollView>
-</android.support.constraint.ConstraintLayout>
+        <view
+            android:id="@+id/flow_genre_detail"
+            class="com.nex3z.flowlayout.FlowLayout"
+            id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:flChildSpacing="auto"
+            app:flChildSpacingForLastRow="align"
+            app:flRowSpacing="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/text_total_votes_detail"
+            app:layout_constraintEnd_toEndOf="@+id/text_genre_detail"
+            app:layout_constraintStart_toStartOf="@+id/text_genre_detail"
+            app:layout_constraintTop_toBottomOf="@+id/text_genre_detail" />
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
