--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimaryLight">#BBDEFB</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary_text">#212121</color>
+    <color name="colorSecondary_text">#757575</color>
+    <color name="colorIcons">#FFFFFF</color>
+    <color name="colorDivider">#BDBDBD</color>
 
     <color name="colorYello">#ffff00</color>
     <color name="colorRed">#ff0000</color>
@@ -12,5 +18,9 @@
     <color name="colorBlack">#000000</color>
     <color name="partialTransparent">#50ffffff</color>
     <color name="colorWhite">#ffffff</color>
+
+    <color name="textBlack">#000000</color>
+    <color name="textDarkBlue">#311b92</color>
+    <color name="textWhite">#ffffff</color>
 
 </resources>
