--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,17 +99,17 @@
         android:id="@+id/text_progress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Please Wait...\n Fetching Data from Internet..."
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/image_backgroundProgress_main"
         app:layout_constraintEnd_toEndOf="@+id/image_backgroundProgress_main"
-        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main"
-        app:layout_constraintTop_toBottomOf="@+id/LoadingIndicator" />
+        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_detais_main"
