--- a/app/src/main/res/layout/movie_single_holder.xml
+++ b/app/src/main/res/layout/movie_single_holder.xml
@@ -50,7 +50,7 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:text="TextView\nTitle\nHere"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorBlack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/constraint_Movie_lower" />
