--- a/app/src/main/res/drawable/background_detail_vector.xml
+++ b/app/src/main/res/drawable/background_detail_vector.xml
@@ -1,6 +1,6 @@
 <vector android:height="24dp" android:viewportHeight="2500"
     android:viewportWidth="3500" android:width="24dp"
-    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#98666666" android:pathData="M1280.9,121.9L1707,469.6L1566.3,605.1Z"/>
     <path android:fillColor="#98333333" android:pathData="M1707,469.6L1747.8,554.2L1566.3,605.1Z"/>
     <path android:fillColor="#98333333" android:pathData="M2529.8,423.7L2763.3,430.8L2925.4,561.3Z"/>
