--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -39,17 +39,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_splash_screen" />
 
-    <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/progressBar_splash_screen"
-        style="@style/AVLoadingIndicatorView.Large"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:indicatorColor="@color/colorAccent"
-        app:indicatorName="BallGridPulseIndicator"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView" />
+    <!--<com.wang.avi.AVLoadingIndicatorView-->
+        <!--android:id="@+id/progressBar_splash_screen"-->
+        <!--style="@style/AVLoadingIndicatorView.Large"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--app:indicatorColor="@color/colorAccent"-->
+        <!--app:indicatorName="BallGridPulseIndicator"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/textView2"-->
+        <!--app:layout_constraintEnd_toEndOf="@+id/imageView"-->
+        <!--app:layout_constraintStart_toStartOf="@+id/imageView" />-->
 </android.support.constraint.ConstraintLayout>
